# GDGJP-Hackathon-SR

./: .gitignore  FORM_COMPLETE.md  INSTALLATION_COMPLETE.md  README.md  START_HERE.md  TEST_FORM.md  Vision.py  Vision_test.py  main.py  mock_form.json  mock_form2.json  package-lock.json  pdf_generate.py  pyproject.toml  result_3b608b06.json  result_71440e44.json  result_7b2d13f4.json  result_9e07ccad.json  result_b08fb08f.json  result_d2324420.json  result_d7379669.json  result_db401a62.json  server.py  try.py
ai-privacy-amanuensis/: DEMO_QUICKSTART.md  INTEGRATION_DEMO.md  QUICK_START.md  READY_TO_RUN.md  SETUP_AND_RUN.md  package-lock.json  package.json  start-all.sh  start-backend-agent.sh  start-frontend.sh  verify-setup.sh
ai-privacy-amanuensis/backend/: pdf_generate.py  server.py  心身障碍者福祉手当認定申請書.json  心身障碍者福祉手当認定申請書Mapping.json
ai-privacy-amanuensis/src/app/: globals.css  layout.tsx  page.tsx
ai-privacy-amanuensis/src/app/api/download-pdf/: route.ts
ai-privacy-amanuensis/src/app/api/form-schema/: route.ts
ai-privacy-amanuensis/src/app/api/generate-pdf/: route.ts
ai-privacy-amanuensis/src/app/api/myfiles/: route.ts
ai-privacy-amanuensis/src/app/api/token/: route.ts
ai-privacy-amanuensis/src/app/files/: page.tsx
ai-privacy-amanuensis/src/app/form/: page.tsx
ai-privacy-amanuensis/src/app/success/: page.tsx
ai-privacy-amanuensis/src/components/: FormPage.tsx  PrivacyGate.tsx  ThemeProvider.tsx
ai-privacy-amanuensis/src/services/: pdfEngine.ts  webAuthn.ts
