[project]
name = "visionapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "livekit-agents>=1.4.5",
    "livekit-api>=1.1.0",
    "livekit-plugins-google>=1.4.5",
    "livekit-plugins-openai>=1.4.5",
    "livekit-plugins-silero>=1.4.5",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.41.0",
]
